--- a/app/views/layinghens/current/pullet-project-type.html
+++ b/app/views/layinghens/current/pullet-project-type.html
@@ -29,7 +29,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <!-- Path for next page -->
-      <form class="form" action="hen-project-type-answer" method="post">
+      <form class="form" action="pullet-project-type-answer" method="post">
 
         <!-- Page heading -->
         <div class="govuk-form-group">
