--- a/app/views/layinghens/current/agent-details.html
+++ b/app/views/layinghens/current/agent-details.html
@@ -21,7 +21,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" id="mainForm" action="{{ nextUrl }}" method="post">
+      <form class="form" id="mainForm" action="check-details" method="post">
         <h1 class="govuk-heading-l"> Agent's details</h1>
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Name</h2>
         <div class="govuk-form-group">
