--- a/app/views/layinghens/current/applying.html
+++ b/app/views/layinghens/current/applying.html
@@ -21,7 +21,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form class="form" action="{{ nextUrl }}" method="post">
+      <form class="form" action="applying-answer" method="post">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -29,17 +29,17 @@
                 Who is applying for this grant?
               </h1>
             </legend>
-            <br><br>
+           
             <div class="govuk-radios--inline">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applicant" name="applicant" type="radio" value="Applicant">
+                <input class="govuk-radios__input" id="applicant" name="applying" type="radio" value="applicant">
                 <label class="govuk-label govuk-radios__label" for="applicant">
             Applicant
                 </label>
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applicant-2" name="applicant" type="radio" value="Agent">
+                <input class="govuk-radios__input" id="applicant-2" name="applying" type="radio" value="agent">
                 <label class="govuk-label govuk-radios__label" for="applicant-2">
                   Agent
                 </label>
