--- a/app/views/layinghens/current/business.html
+++ b/app/views/layinghens/current/business.html
@@ -22,7 +22,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" id="mainForm" action="{{ nextUrl }}" method="post">
+      <form class="form" id="mainForm" action="applying" method="post">
 
         <h1 class="govuk-heading-l">
           Business details
@@ -84,13 +84,7 @@
           Continue
         </button>
 
-        {% if data['DETAILS'] == true %}
-          <button onclick="document.getElementById('mainForm').action='{{ detailsUrl }}'"
-            class="govuk-button govuk-button--secondary govuk-!-margin-right-1 govuk" data-module="govuk-button"
-          >
-            Back to details
-          </button>
-        {% endif %}
+        
       </form>
     </div>
   </div>
