--- a/app/views/layinghens/current/consent.html
+++ b/app/views/layinghens/current/consent.html
@@ -13,7 +13,8 @@
     },
       html: 'This is not a full service. It is not production code and you might experience problems .'
   }) }}
-  <a class="govuk-back-link" href="check-details">Back</a>
+ 
+  <a class="govuk-back-link" href="javascript:window.history.back()">Back</a>
 
 {% endblock %}
 
@@ -50,7 +51,7 @@
       </strong>
     </div>
 
-    <form class="form" action="{{ nextUrl }}" method="post">
+    <form class="form" action="reference-number" method="post">
       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
         Confirm and send
       </button>
