--- a/app/views/layinghens/current/poultry-type.html
+++ b/app/views/layinghens/current/poultry-type.html
@@ -26,6 +26,7 @@
 {% block content %}
 
   <div class="govuk-grid-row">
+
     <div class="govuk-grid-column-two-thirds">
 
       <!-- Path for next page -->
@@ -45,6 +46,7 @@
 
             <!-- Option: Laying Hens -->
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="poultry-type" name="poultry-type" type="checkbox" value="hens">
                   <label class="govuk-label govuk-checkboxes__label" for="poultry-type">
@@ -53,7 +55,7 @@
                 </div>
 
                 <!-- Option: Pullets -->
-              <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="poultry-type-2" name="poultry-type" type="checkbox" value="pullets">
                   <label class="govuk-label govuk-checkboxes__label" for="poultry-type-2">
@@ -65,7 +67,7 @@
               <div class="govuk-radios__divider">or</div>
 
               <!-- Option: None of the above -->
-              <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="poultry-type-3" name="poultry-type" type="checkbox" value="none" data-behaviour="exclusive">
                   <label class="govuk-label govuk-checkboxes__label" for="poultry-type-3">
@@ -74,6 +76,7 @@
                 </div>
 
             </div>
+
           </fieldset>
         </div>
 
@@ -110,10 +113,9 @@
               <li>adding a veranda to existing housing</li>
             </ul>
   
-          <a href="#">
-          </a>
-
       </div>
+
+    </div>
 
   </div>
 
