Content amendments up to and including hen project type

--- a/app/views/layinghens/current/country-fail.html
+++ b/app/views/layinghens/current/country-fail.html
@@ -35,7 +35,11 @@
           text: 'Scotland, Wales and Northern Ireland have other grants available.'
       }) }}
 
-
+      <p>
+        <a href="https://www.gov.uk/guidance/funding-for-farmers">
+          See other grants you may be eligible for.
+        </a>
+      </p>
 
       <!--See the <a href="">large countryside productivity grant guidance</a> for further information.</p>-->
 
