--- a/app/views/layinghens/current/planning-required-condition.html
+++ b/app/views/layinghens/current/planning-required-condition.html
@@ -22,7 +22,7 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-body govuk-!-font-size-48">
         <h1 class="govuk-heading-l">
-          You may be able to apply for this grant
+          You may be able to apply for this grant from this scheme
         </h1>
 
         <p>You must have secured planning permission before you submit a full application. The application deadline is 31 October 2025.</p>
@@ -30,6 +30,12 @@
             <form class="form" action="planning-required-condition-answer" method="post">
               <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
             </form>
+
+            <p>
+        <a href="https://www.gov.uk/guidance/funding-for-farmers">
+          See other grants you may be eligible for.
+        </a>
+      </p>
 
       </div>
     </div>
