--- a/app/views/layinghens/current/poultry-type.html
+++ b/app/views/layinghens/current/poultry-type.html
@@ -84,7 +84,7 @@
           <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
           <strong class="govuk-warning-text__text">
             <span class="govuk-visually-hidden">Warning</span>
-            You can only apply for grant funding for a veranda-only project for one type of poultry
+            You can only apply for grant funding for a veranda-only project for one type of poultry.
           </strong>
         </div>
 
@@ -105,13 +105,9 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>This grant is for:</p>
-
-            <ul class="govuk-list govuk-list--bullet">
-              <li>building new housing for laying hens or pullets</li>
-              <li>refurbishing or extending existing laying hens or pullet housing</li>
-              <li>adding a veranda to existing housing</li>
-            </ul>
+          <p>
+            This grant is for replacing or refurbishing existing housing for laying hens or pullets.
+          </p>
   
       </div>
 
