--- a/app/views/layinghens/current/project-responsibility.html
+++ b/app/views/layinghens/current/project-responsibility.html
@@ -28,7 +28,7 @@ Will you take full responsibility for your project?
                 Will you take full responsibility for your project?
               </h1>
             </legend>
-            <p>If you are on a short tenancy, you can ask your landlord to underwrite your agreement. This means they will take over your agreement if your tenancy ends. For example, your landlord could pass the agreed project to the new tenant.</p>
+            <p>If you are on a short tenancy, you can ask your landlord to underwrite your agreement. This means they will take over your agreement if your tenancy ends.</p>
             <p>This approach is optional and we will only ask for details at full application.</p>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
