--- a/app/views/layinghens/current/hen-project-type.html
+++ b/app/views/layinghens/current/hen-project-type.html
@@ -36,7 +36,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What is your hen housing project?
+                What is your project?
               </h1>
             </legend>
 
@@ -45,9 +45,16 @@
               
              
               <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="hen-housing-type-1" name="hen-project-type" type="radio" value="replace">
+                <label class="govuk-label govuk-radios__label" for="hen-housing-type-1">
+                  Replacing existing housing
+                </label>
+              </div>
+
+              <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="hen-housing-type-2" name="hen-project-type" type="radio" value="refurb">
                 <label class="govuk-label govuk-radios__label" for="hen-housing-type-2">
-                  Replacing or refurbishing an existing housing
+                  Refurbishing existing housing
                 </label>
               </div>
 
@@ -92,11 +99,17 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>You can apply for grant funding for either a housing project or adding a veranda only to existing housing.</p>
+          <p>
+            You can apply for grant funding for either a housing project or adding a veranda only to existing housing.
+          </p>
 
-          <p>The RPA will award grant funding for adding a veranda only to existing housing on a first-come first-served basis. You do not need to complete any eligibility or scoring questions.</p>
+          <p>
+            The RPA will award grant funding for adding a veranda only to existing housing on a first-come first-served basis. You do not need to complete any eligibility or scoring questions.
+          </p>
 
-          <p>To apply for grant funding for housing projects, you need to complete eligibility and scoring questions.</p>      
+          <p>
+            To apply for grant funding for housing projects, you need to complete eligibility and scoring questions.
+          </p>      
     
 
       </div>
