--- a/app/views/layinghens/current/project-start.html
+++ b/app/views/layinghens/current/project-start.html
@@ -79,8 +79,7 @@ Have you already started work on the project?
         <span class="app-step-nav-related__pretitle">Eligibility</span>
         </h2>
         <p>You will invalidate your application if you start the project or commit to any costs (such as placing orders) before you receive a funding agreement.</p>
-        <p>Before you start the project, you
-can:
+        <p>Before you start the project you can:
 <ul class="govuk-list govuk-list--bullet">
   <li>get quotes from suppliers</li>
   <li>apply for planning permissions (this can take a long time)</li>
