Updates based on mural board

--- a/app/views/layinghens/current/hen-aviary-lighting.html
+++ b/app/views/layinghens/current/hen-aviary-lighting.html
@@ -41,7 +41,7 @@
             </legend>
 
             <!-- Hint text -->
-            <p class="govuk-hint"> This provides dimmable non-flicker lighting at each level, including top perches and under the system itself</p>
+            <p class="govuk-hint">This provides dimmable non-flicker lighting at each level of the aviary system, including top perches and under the system</p>
             
             <!-- Option: Yes -->
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
@@ -79,15 +79,7 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>The lighting must be able to provide:</p>
-
-          <ul class="govuk-list govuk-list--bullet">
-            <li>Non-flicker light between approximately 3000 Kelvin and 4000 Kelvin colour temperature</li>
-            <li>Zonal dimming between 0 lux and 60 lux</li>
-           </ul>
-
-          <a href="#">
-          </a>
+          <p>The lighting system must have a non-flicker light and zonal dimming.</p>
 
       </div>
 
