--- a/app/views/layinghens/current/hen-inlets.html
+++ b/app/views/layinghens/current/hen-inlets.html
@@ -36,7 +36,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the side wall ventilation inlets and outlets be capped with mesh less than or equal to 25 millimetres (mm) in thickness?
+                Will the wall inlets and outlets be capped with mesh that has a spacing of 6 millimetres (mm) or less?
               </h1>
             </legend>
           
@@ -76,7 +76,7 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>The housing must have sidewall ventilation inlets and outlets that are capped with mesh which is less than or equal to 25mm in thickness.</p>
+          <p>The housing must have  wall inlets and outlets that are capped with mesh that has a spacing of 6mm or less.</p>
           
 
           <a href="#">
