--- a/app/views/layinghens/current/hen-lighting-features.html
+++ b/app/views/layinghens/current/hen-lighting-features.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Hen Lighting System Features – {{ serviceName }} – GOV.UK Prototype Kit
+  Will the hen house lighting system have these features? 
 {% endblock %}
 
 {% block beforeContent %}
@@ -36,17 +36,17 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the hen house lighting system have these features? 
+                Will the hen house lighting system have these features?
               </h1>
             </legend>
 
             <!-- Hint text -->
-            <p class="govuk-hint">The building's lighting system must have:</p>
+            <p class="govuk-hint">The housing lighting system must have:</p>
             
             <ul class="govuk-list govuk-list--bullet">
-              <li class="govuk-hint">the ability to provide an automatic stepped dawn or dusk lighting environment (unless this is already provided as part of an aviary lighting system)</li>
+              <li class="govuk-hint">the ability to provide an automatic stepped dawn and dusk lighting environment (unless this is already provided as part of an aviary lighting system)</li>
               <li class="govuk-hint">an option for red light</li>
-              <li class="govuk-hint">a fail-safe standby device in case of electrical or other failure</li>
+              <li class="govuk-hint">a fail-safe standby device in case of electrical or other failures</li>
              </ul>
           
             <!-- Option: Yes -->
