--- a/app/views/layinghens/current/hen-manure-removal.html
+++ b/app/views/layinghens/current/hen-manure-removal.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Hen Manure Removal Belt – {{ serviceName }} – GOV.UK Prototype Kit
+  Will the aviary system automatically remove manure?
 {% endblock %}
 
 {% block beforeContent %}
@@ -36,7 +36,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the aviary system have an integrated automatic manure-removal belt system?
+                Will the aviary system automatically remove manure?
               </h1>
             </legend>
           
@@ -75,7 +75,9 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-         <p>The hen housing's aviary system must have an automatic manure-removal belt to ensure good air quality. </p>
+         <p>
+          To ensure good air quality, the aviary system must have an integrated automatic manure-removal system.
+         </p>
           
 
       </div>
