--- a/app/views/layinghens/current/hen-ventilation-features.html
+++ b/app/views/layinghens/current/hen-ventilation-features.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Hen Ventilation Features – {{ serviceName }} – GOV.UK Prototype Kit
+  Will the hen housing have a mechanical ventilation system with the following? 
 {% endblock %}
 
 {% block beforeContent %}
@@ -36,16 +36,16 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the ventilation have these features? 
+                Will the hen housing have a mechanical ventilation system with the following? 
               </h1>
             </legend>
 
             <p class="govuk-hint"> The ventilation must have:</p>
             
             <ul class="govuk-list govuk-list--bullet">
-              <li class="govuk-hint">a control system to automatically measure and record the daily temperature, humidity and air levels</li>
+              <li class="govuk-hint">a control system to automatically measure and record the daily temperature, humidity, and CO2 levels</li>
               <li class="govuk-hint">an alarm system (that detects excessive high or low temperatures and system failures) with a power supply independent of mains electricity</li>
-              <li class="govuk-hint">an emergency power supply in case of electrical or other failure, for example a high-capacity generator</li>
+              <li class="govuk-hint">an emergency power supply, for example a high-capacity generator, in case of electrical or other failures</li>
              </ul>
           
             <!-- Option: Yes -->
