--- a/app/views/layinghens/current/hen-ventilation-quality.html
+++ b/app/views/layinghens/current/hen-ventilation-quality.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Hen Ventilation Air Quality – {{ serviceName }} – GOV.UK Prototype Kit
+  Will the ventilation maintain the required air quality parameters?
 {% endblock %}
 
 {% block beforeContent %}
