--- a/app/views/layinghens/current/hen-ventilation-rate.html
+++ b/app/views/layinghens/current/hen-ventilation-rate.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Hen Ventilation Rate – {{ serviceName }} – GOV.UK Prototype Kit
+  Will the ventilation system be able to provide a ventilation rate (MXVR) of 10,800m3 per hour per 1000 birds? 
 {% endblock %}
 
 {% block beforeContent %}
@@ -36,7 +36,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the ventilation have a ventilation rate (MXVR) of 10,800m3/hour per 1000 birds? 
+                Will the ventilation system be able to provide a ventilation rate (MXVR) of 10,800m3 per hour per 1000 birds?
               </h1>
             </legend>
 
@@ -71,6 +71,18 @@
 
       </form>
     </div>
+
+    <div class="govuk-grid-column-one-third">
+
+      <div class="app-step-nav-related app-step-nav-related--singular">
+        <h2 class="app-step-nav-related__heading">
+          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          </h2>
+          <p>The ventilation system must be able to provide a ventilation rate (MXVR) of 10,800m3 per hour per 1000 birds in the case of high heat scenarios.</p>
+
+      </div>
+
+  </div>
 
   </div>
 
