--- a/app/views/layinghens/current/hen-ventilation-speed.html
+++ b/app/views/layinghens/current/hen-ventilation-speed.html
@@ -36,7 +36,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the hen housing ventilation provide an air speed of 1 metre per second over birds in hot weather?
+                Will the hen housing ventilation be able to provide an air speed of 1 metre per second over birds?
               </h1>
             </legend>
           
