--- a/app/views/layinghens/current/hen-veranda-specification.html
+++ b/app/views/layinghens/current/hen-veranda-specification.html
@@ -46,8 +46,8 @@
               <li class="govuk-hint">a solid concrete floor</li>
               <li class="govuk-hint">a waterproof insulated roof</li>
               <li class="govuk-hint">guttering and a down-pipe to feed into the drainage system of the main building</li>
-              <li class="govuk-hint">a perimeter wall of equal to or more than 1 metre in height</li>
-              <li class="govuk-hint">mesh roller-screen system running underneath the length of the roof, that fits against the wall when extended</li>
+              <li class="govuk-hint">a perimeter wall at least 1 metre high with lockable pop holes, unless the veranda forms part of an indoor barn system</li>
+              <li class="govuk-hint">mesh roller-screen system running underneath the length of the roof, that fits securely against the wall when extended</li>
               <li class="govuk-hint">a dimmable LED lighting system between 0 lux and 60 lux</li>
              </ul>
           
