--- a/app/views/layinghens/current/hen-insulation.html
+++ b/app/views/layinghens/current/hen-insulation.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Hen Insulation – {{ serviceName }} – GOV.UK Prototype Kit
+  Will the hen housing have full wall and roof insulation, with a U-Value of less than 0.3W/m2/°C?
 {% endblock %}
 
 {% block beforeContent %}
@@ -24,6 +24,70 @@
 {% endblock %}
 
 {% block content %}
+
+ {% if data['hen-refurbishing'] == 'refurbish' %} 
+
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+
+      <!-- Path for next page -->
+      <form class="form" action="hen-insulation-answer" method="post">
+
+        <!-- Page heading -->
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h1 class="govuk-fieldset__heading">
+                Will the hen housing have full wall and roof insulation?
+              </h1>
+            </legend>
+          
+            <!-- Option: Yes -->
+            <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="has-insulation-hen" name="hen-insulation" type="radio" value="yes">
+                <label class="govuk-label govuk-radios__label" for="has-insulation-hen">
+                  Yes
+                </label>
+              </div>
+
+              <!-- Option: No -->
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="has-insulation-hen-2" name="hen-insulation" type="radio" value="no">
+                <label class="govuk-label govuk-radios__label" for="has-insulation-hen-2">
+                  No
+                </label>
+              </div>
+
+            </div>
+          </fieldset>
+        </div>
+
+        <!-- Continue button -->
+        <button class="govuk-button" data-module="govuk-button">
+          Continue
+        </button>
+
+      </form>
+    </div>
+
+    <!-- Eligibility sidebar -->
+    <div class="govuk-grid-column-one-third">
+
+      <div class="app-step-nav-related app-step-nav-related--singular">
+        <h2 class="app-step-nav-related__heading">
+          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          </h2>
+          <p>
+            The hen housing must have full wall and roof insulation.
+          </p>
+
+      </div>
+
+  </div>
+
+
+  {% else %} 
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -76,14 +140,17 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>The wall and roof insulation of the housing must have a U-Value of less than 0.3W/m2/°C.</p>
-          <p>The U-Value measures the rate of heat transfer from inside a building to outside.</p>
-
-          <a href="#">
-          </a>
+          <p>
+            The wall and roof insulation of the hen housing must have a U-Value of less than 0.3W/m2/°C.
+          </p>
+          <p>
+            The U-Value measures the rate of heat transfer from inside a building to outside.
+          </p>
 
       </div>
 
   </div>
+
+  {% endif %} 
 
 {% endblock %}
