--- a/app/views/layinghens/current/hen-veranda-placement.html
+++ b/app/views/layinghens/current/hen-veranda-placement.html
@@ -36,12 +36,16 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the veranda use the length of the hen housing and face onto the range?
+                Will the veranda be along the length of the hen housing and face onto the outside space?
               </h1>
             </legend>
+
+            <p class="govuk-hint">
+              Barn system projects without the required outside space to add the veranda along the length of the hen housing are exempt and can add the veranda where there is space
+            </p>
           
             <!-- Option: Yes -->
-            <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
+            <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="has-placement" name="hen-veranda-placement" type="radio" value="yes">
                 <label class="govuk-label govuk-radios__label" for="has-placement">
@@ -56,6 +60,22 @@
                   No
                 </label>
               </div>
+
+              <!-- 'or' divider-->
+              <div class="govuk-radios__divider">or</div>
+
+              <!-- Option: None of the above -->
+              <div class="govuk-radios" data-module="govuk-radios">
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="has-placement-3" name="hen-veranda-placement" type="radio" value="exempt">
+                  <label class="govuk-label govuk-radios__label" for="has-placement-3">
+                    My project is exempt
+                  </label>
+                </div>
+
+            </div>
+
+
 
             </div>
           </fieldset>
@@ -72,7 +92,19 @@
      <!-- Eligibility sidebar -->
      <div class="govuk-grid-column-one-third">
 
+      <div class="app-step-nav-related app-step-nav-related--singular">
+        <h2 class="app-step-nav-related__heading">
+          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          </h2>
+          <p>
+            The veranda must use the length of the hen housing, not the width, and face onto the outside space, if accessible.
+          </p>
+
+      </div>
 
   </div>
+
+  </div>
+
 
 {% endblock %}
