--- a/app/views/layinghens/current/hen-welfare-ramps.html
+++ b/app/views/layinghens/current/hen-welfare-ramps.html
@@ -36,11 +36,11 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the aviary system have ramps or platforms that meet manufacture recommendations for high welfare?
+                Will the aviary system meet the manufacture's recommendation for high welfare?
               </h1>
             </legend>
 
-            <p class="govuk-hint">The frequency and position of ramps and platforms must meet the manufacturer's recommendation for a high welfare system.</p>
+            <p class="govuk-hint">The birds must be able to move between levels without flying or jumping more than one metre in height</p>
           
             <!-- Option: Yes -->
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
@@ -78,8 +78,7 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>Unless the aviary system has been designed for easy access it must include welfare ramps or platforms to allow the birds free movement around and within the system.</p>
-          <p>The birds must be able to move between levels without flying or jumping more than one metre in height.</p>
+          <p>The aviary system must include a frequency and position of ramps and platforms that meet the manufacturer's recommendation for high welfare, unless the aviary system has been designed for easy access.</p>
 
       </div>
 
