Added test to page title

--- a/app/views/layinghens/current/hen-housing-features.html
+++ b/app/views/layinghens/current/hen-housing-features.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Housing Features – {{ serviceName }} – GOV.UK Prototype Kit
+  Housing Features – {{ serviceName }} – GOV.UK Prototype Kit TEST
 {% endblock %}
 
 {% block beforeContent %}
