content updates and updated package

--- a/app/views/layinghens/current/views/layouts/layout.html
+++ b/app/views/layinghens/current/views/layouts/layout.html
@@ -4,3 +4,31 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 #}
 
 {% extends "govuk-prototype-kit/layouts/govuk-branded.njk" %}
+
+{% block beforeContent %}
+
+    <div class="govuk-grid-row">
+
+        <div class="govuk-grid-column-full">
+
+    
+             {{ govukPhaseBanner({
+            tag: {
+            text: "Prototype",
+            classes: "govuk-tag--pink"
+             },
+            html: 'This is not a full service. It is not production code and you might experience problems .'
+            }) }}
+
+            {{ govukBackLink ({
+                text: 'Back',
+                href: 'javascript:history.back()'
+            }) }}
+
+        </div>
+
+    </div>
+
+{% endblock %}
+
+
